[fix] komnualni volby when images are too small to fill the whole spacev

--- a/_sass/components/BasicPage.scss
+++ b/_sass/components/BasicPage.scss
@@ -366,12 +366,17 @@
     }
   }
 
-
   h3 {
     font-family: "Open Sans",Helvetica,Roboto,Arial,sans-serif;
     font-weight: bold;
     margin-bottom: 0.8em;
     font-size: 1.3rem;
+  }
+
+  h4 {
+    font-family: "Open Sans",Helvetica,Roboto,Arial,sans-serif;
+    margin-bottom: .25em;
+    font-size: 1.2rem;
   }
 
   a {
